--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,8 +1,12 @@
 <div
-  class="w-full max-w-lg mt-4 px-8 py-6 my-auto bg-white shadow-lg rounded-lg mx-auto"
+  class="w-full max-w-lg mb-8 px-8  my-auto bg-white shadow-lg rounded-lg mx-auto"
 >
-  <h3 class="text-3xl text-center text-red-400 font-semibold mb-6">Cadastro</h3>
-  <form [formGroup]="registerForm" class="lg:w-full flex flex-col">
+  <h3 class="text-3xl text-center text-red-400 font-semibold mb-2">Cadastro</h3>
+  <form
+    [formGroup]="registerForm"
+    class="lg:w-full flex flex-col"
+    (ngSubmit)="register()"
+  >
     <div class="flex flex-col mb-4">
       <mat-form-field appearance="fill">
         <mat-label>Nome</mat-label>
@@ -92,7 +96,13 @@
         </mat-error>
       </mat-form-field>
     </div>
-    <button mat-flat-button color="accent" >
+    <button
+      mat-flat-button
+      type="submit"
+      color="accent"
+      [disabled]="registerForm.invalid"
+      (click)="(register)"
+    >
       Enviar
     </button>
   </form>
