feat: Implementação do login na aplicação

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -19,8 +19,14 @@
       <button class="bg-red-400 p-2 rounded-r-md text-white">Buscar</button>
     </div>
     <div class="hidden md:flex space-x-6">
-      <a href="#" class="text-gray-100 hover:text-gray-300 font-bold">Login</a>
-      <a href="#" class="text-gray-100 hover:text-gray-300 font-bold"
+      <a
+        [routerLink]="['/login']"
+        class="text-gray-100 hover:text-gray-300 font-bold"
+        >Login</a
+      >
+      <a
+        [routerLink]="['/cadastro']"
+        class="text-gray-100 hover:text-gray-300 font-bold"
         >Cadastre-se</a
       >
       <a href="#" class="text-gray-100 hover:text-gray-300 font-bold"
