--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,59 @@
-<p>login works!</p>
+<div
+  class="w-full max-w-lg mb-8 mt-6 pb-4 px-8 my-auto bg-white shadow-lg rounded-lg mx-auto"
+>
+  <h3 class="text-3xl text-center text-red-400 font-semibold mb-2">Login</h3>
+  <form
+    [formGroup]="loginForm"
+    class="lg:w-full flex flex-col"
+    (ngSubmit)="login()"
+  >
+    <div class="flex flex-col mb-4">
+      <mat-form-field class="w-full" appearance="fill">
+        <mat-label>Email</mat-label>
+        <input matInput placeholder="Email" formControlName="email" />
+        <mat-icon matPrefix>mail_outline</mat-icon>
+        <mat-error *ngIf="loginForm.get('email')!.hasError('required')">
+          *Campo obrigatório
+        </mat-error>
+        <mat-error *ngIf="loginForm.get('email')!.hasError('email')">
+          *Email inválido
+        </mat-error>
+      </mat-form-field>
+    </div>
+
+    <div class="flex flex-col mb-4">
+      <mat-form-field>
+        <mat-label>Senha</mat-label>
+        <input
+          matInput
+          [type]="hide ? 'password' : 'text'"
+          formControlName="password"
+        />
+        <mat-icon matPrefix>lock_outline</mat-icon>
+        <mat-icon class="hide-password" matSuffix (click)="hide = !hide">{{
+          hide ? "visibility_off_outline" : "visibility_outline"
+        }}</mat-icon>
+        <mat-error *ngIf="loginForm.get('password')!.hasError('required')">
+          *Campo obrigatório
+        </mat-error>
+      </mat-form-field>
+    </div>
+
+    <button
+      mat-flat-button
+      type="submit"
+      color="accent"
+      [disabled]="loginForm.invalid"
+    >
+      Entrar
+    </button>
+  </form>
+  <div class="text-center mt-4">
+    <span class="font-semibold">Novo por aqui?</span>
+    <a
+      [routerLink]="['/cadastro']"
+      class="text-red-400 ml-2 cursor-pointer font-bold hover:text-red-500"
+      >Registre-se agora!</a
+    >
+  </div>
+</div>
