--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,5 +1,5 @@
 <div
-  class="w-full max-w-lg mb-8 px-8  my-auto bg-white shadow-lg rounded-lg mx-auto"
+  class="w-full max-w-lg mb-8 mt-6 pb-4 px-8 my-auto bg-white shadow-lg rounded-lg mx-auto"
 >
   <h3 class="text-3xl text-center text-red-400 font-semibold mb-2">Cadastro</h3>
   <form
@@ -109,7 +109,7 @@
   <div class="text-center mt-4">
     <span class="font-semibold">Já tem uma conta?</span>
     <a
-      href=""
+      [routerLink]="['/login']"
       class="text-red-400 ml-2 cursor-pointer font-bold hover:text-red-500"
       >Login</a
     >
