feat: Implementado o envio de email e alteração de senha do usuário

--- a/src/app/pages/reset-password/reset-password.component.html
+++ b/src/app/pages/reset-password/reset-password.component.html
@@ -1,1 +1,77 @@
-<p>reset-password works!</p>
+<div
+  class="w-full max-w-lg mb-8 mt-6 pb-4 px-8 my-auto bg-white shadow-lg rounded-lg mx-auto"
+>
+  <h3 class="text-3xl text-center text-red-400 font-semibold mb-2">
+    Alterar senha
+  </h3>
+  <p class="font-semibold my-5 text-center">Informe sua nova senha</p>
+  <form
+    [formGroup]="resetPasswordForm"
+    class="lg:w-full flex flex-col"
+    (ngSubmit)="submit()"
+  >
+    <div class="flex flex-col mb-4">
+      <mat-form-field>
+        <mat-label>Nova senha</mat-label>
+        <input
+          matInput
+          [type]="hide ? 'password' : 'text'"
+          formControlName="password"
+        />
+        <mat-icon matPrefix>lock_outline</mat-icon>
+        <mat-icon class="hide-password" matSuffix (click)="hide = !hide">{{
+          hide ? "visibility_off_outline" : "visibility_outline"
+        }}</mat-icon>
+        <mat-error
+          *ngIf="resetPasswordForm.get('password')!.hasError('required')"
+        >
+          *Campo obrigatório
+        </mat-error>
+        <mat-error
+          *ngIf="
+            resetPasswordForm.get('confirmPassword')!.hasError('mustMatch')
+          "
+        >
+          As senhas não correspondem
+        </mat-error>
+      </mat-form-field>
+    </div>
+    <div class="flex flex-col mb-4">
+      <mat-form-field>
+        <mat-label>Confirmar nova senha</mat-label>
+        <input
+          matInput
+          [type]="hide ? 'password' : 'text'"
+          formControlName="confirmPassword"
+        />
+        <mat-icon matPrefix>lock_outline</mat-icon>
+        <mat-icon class="hide-password" matSuffix (click)="hide = !hide">{{
+          hide ? "visibility_off_outline" : "visibility_outline"
+        }}</mat-icon>
+        <mat-error
+          *ngIf="resetPasswordForm.get('confirmPassword')!.hasError('required')"
+        >
+          *Campo obrigatório
+        </mat-error>
+        <mat-error
+          *ngIf="
+            resetPasswordForm.get('confirmPassword')!.hasError('mustMatch')
+          "
+        >
+          As senhas não correspondem
+        </mat-error>
+      </mat-form-field>
+
+      <div class="flex mt-2 gap-2">
+        <button
+          mat-flat-button
+          type="submit"
+          color="accent"
+          [disabled]="resetPasswordForm.invalid"
+        >
+          Enviar
+        </button>
+      </div>
+    </div>
+  </form>
+</div>
