--- a/src/app/pages/forget-password/forget-password.component.html
+++ b/src/app/pages/forget-password/forget-password.component.html
@@ -1,1 +1,43 @@
-<p>forget-password works!</p>
+<div
+  class="w-full max-w-lg mb-8 mt-6 pb-4 px-8 my-auto bg-white shadow-lg rounded-lg mx-auto"
+>
+  <h3 class="text-3xl text-center text-red-400 font-semibold mb-2">
+    Recuperar senha
+  </h3>
+  <p class="font-semibold my-5 text-center">
+    Informe o email para alterar sua senha.
+  </p>
+  <form
+    [formGroup]="resetPasswordForm"
+    class="lg:w-full flex flex-col"
+    (ngSubmit)="submit()"
+  >
+    <div class="flex flex-col ">
+      <mat-form-field class="w-full" appearance="fill">
+        <mat-label>Email</mat-label>
+        <input matInput placeholder="Email" formControlName="email" />
+        <mat-icon matPrefix>mail_outline</mat-icon>
+        <mat-error *ngIf="resetPasswordForm.get('email')!.hasError('required')">
+          *Campo obrigatório
+        </mat-error>
+        <mat-error *ngIf="resetPasswordForm.get('email')!.hasError('email')">
+          *Email inválido
+        </mat-error>
+      </mat-form-field>
+    </div>
+
+    <div class="flex mt-2 gap-2">
+      <button
+        mat-flat-button
+        type="submit"
+        color="accent"
+        [disabled]="resetPasswordForm.invalid"
+      >
+        Enviar
+      </button>
+      <button routerLink="/login" mat-flat-button type="button" color="primary">
+        Cancelar
+      </button>
+    </div>
+  </form>
+</div>
