--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -48,12 +48,19 @@
       Entrar
     </button>
   </form>
-  <div class="text-center mt-4">
-    <span class="font-semibold">Novo por aqui?</span>
+  <div class="flex flex-col mt-5">
     <a
-      [routerLink]="['/cadastro']"
-      class="text-red-400 ml-2 cursor-pointer font-bold hover:text-red-500"
-      >Registre-se agora!</a
+      [routerLink]="['/recuperar-senha']"
+      class="text-red-400 text-center cursor-pointer font-bold hover:text-red-500"
+      >Esqueceu sua senha?</a
     >
+    <div class="text-center mt-4">
+      <span class="font-semibold">Novo por aqui?</span>
+      <a
+        [routerLink]="['/cadastro']"
+        class="text-red-400 ml-2 cursor-pointer font-bold hover:text-red-500"
+        >Registre-se agora!</a
+      >
+    </div>
   </div>
 </div>
