fix: Ajuste no favicon da aplicação

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -38,7 +38,7 @@
           >Carrinho</a
         >
         <a href="#" class="text-gray-100 hover:text-gray-300 font-bold"
-          >Bem vindo</a
+          >Bem vindo {{ userName }}</a
         >
         <a
           [routerLink]="['/login']"
