--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,9 @@
 <h4 class="text-4xl text-center mt-10 font-bold">Bem vindo ao Book Store</h4>
+
+<div
+  class="container mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4"
+>
+  <ng-container *ngFor="let book of books">
+    <app-book-card [book]="book" class="flex flex-wrap justify-center" />
+  </ng-container>
+</div>
