--- a/src/app/components/book-card/book-card.component.html
+++ b/src/app/components/book-card/book-card.component.html
@@ -2,9 +2,9 @@
   <div
     class="relative flex flex-col mt-6 text-gray-700 bg-white shadow-md bg-clip-border rounded-xl w-full max-w-sm md:max-w-md lg:max-w-lg xl:max-w-xl mx-auto"
   >
-    <!-- Preço no canto superior direito -->
+
     <div class="absolute top-4 right-4 text-lg font-bold text-blue-gray-900">
-      {{ book.price }}
+      {{ book.price | currency: 'BRL'}}
     </div>
 
     <img
@@ -32,6 +32,7 @@
       <button
         class="align-middle select-none font-sans font-bold text-center uppercase transition-all disabled:opacity-50 disabled:shadow-none disabled:pointer-events-none text-xs py-3 px-6 rounded-lg bg-red-400 text-white shadow-md shadow-blue-600/10 hover:shadow-lg hover:shadow-blue-600/20 focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none"
         type="button"
+        (click)="addToCart(book)"
       >
         Adicionar ao Carrinho
       </button>
